--- a/Chat-Chan/packages.config
+++ b/Chat-Chan/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Infragistics.Themes.MetroDark.Wpf" version="1.0.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="PresentationFramework" version="4.6.0" targetFramework="net472" />
 </packages>
