--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,8 @@
-image: Visual Studio 2017
+image: Visual Studio 2019
+version: '1.0.{build}'
 configuration: Release
 before_build:
-  - nuget restore
+  - nuget restore Chat-Chan.sln
 build:
   parallel: true
   project: Chat-Chan.sln
