--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,8 @@
 image: Visual Studio 2019
 version: '1.0.{build}'
+
 configuration: Release
+platform: Any CPU
 before_build:
   - nuget restore Chat-Chan.sln
 build:
